style: fix body overflow issue on Firefox mobile browser

--- a/src/stylesheets/reset.css
+++ b/src/stylesheets/reset.css
@@ -19,6 +19,11 @@ dd {
   margin: 0;
 }
 
+/* Resolve body overflow issue in Firefox due to dynamic text content at Hero Heading */
+.body {
+  overflow-x: hidden;
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
